[package]
name = "e-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
ring = "0.17.8"
libc = "0.2.154"
mio = { version = "0.7", features = ["os-util", "os-poll", "udp"] }
serde = "1.0.200"
serde_derive = "1.0.200"
bincode = "*"
log = "0.4.21"
env_logger = "0.11.3"
dns-lookup = "2.0.4"
snap = "1.1.1"
rand = "0.9.0-alpha.1"
transient-hashmap = "0.4.1"
